--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "axios": "^0.16.2",
     "cors": "^2.8.4",
+    "dot-env": "0.0.1",
+    "dotenv": "^4.0.0",
     "fullcalendar": "^3.4.0",
     "jquery": "^3.1.1",
     "moment": "^2.18.1",
