--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-moment": "^0.6.1",
-    "react-scripts": "1.0.10"
+    "react-scripts": "^1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
